--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chalk Board Simulator</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
 </head>
+<header>
+    <h1> The Chalk-Bored Experience</h1>
+</header>
 <body>
+    <div id="blackboard-div">
+        <img id="blackboard" src="background.png" alt="">
+    </div>
 
-<div id="blackboard"></div>
-
-<script src="script.js"></script>
-
+    <section id="holder">
+        <ul id="chalk">
+            <li id="red">red</li>
+            <li id="green">green</li>
+            <li id="blue">blue</li>
+            <li id="black">black</li>
+            <li id="white">white</li>
+            <li id="eraser">eraser</li>
+        </ul>
+    </section>
+    <footer>
+        <a>Envisioned by Jager</a>
+        <a href="https://github.com/aidenH4042/Blackbored/tree/main">Brought to life by Spuddy</a>
+    </footer>
+    <audio id="chalkAudio">
+        <source src="chalk.mp3" type="audio/mp3">
+    </audio>
 </body>
 </html>
